# TentaclIoT

./: CMakeLists.txt  README.md
I2C_protocol/: CMakeLists.txt  I2CBridge.cpp  I2CDevice.cpp  I2CDevice.h  I2CEventListener.h
iotivity-1.1.0/: iotivity.pc
iotivity-1.1.0/resource/examples/: CMakeLists.txt  simpleserver.cpp
lib/googletest/googlemock/: CMakeLists.txt
lib/googletest/googlemock/test/: gmock-matchers_test.cc  gmock_output_test.py
lib/googletest/googletest/: CMakeLists.txt
lib/googletest/googletest/cmake/: internal_utils.cmake
lib/googletest/googletest/include/gtest/: gtest.h
lib/googletest/googletest/include/gtest/internal/: gtest-port.h
lib/googletest/googletest/test/: gtest-port_test.cc  gtest-printers_test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_break_on_failure_unittest.py  gtest_catch_exceptions_test.py  gtest_help_test.py  gtest_list_tests_unittest.py  gtest_output_test.py  gtest_shuffle_test.py  gtest_throw_on_failure_test.py  gtest_unittest.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
lib/jsoncpp/: CMakeLists.txt  jsoncpp.cpp
samples/: CMakeLists.txt  sampleResourceClient.cpp  sampleResourceServer.cpp
src/: Bundle.h  CMakeLists.txt  Client.cpp  Client.h  Configuration.cpp  Configuration.h  Constants.h  DiscoveryManager.cpp  DiscoveryManager.h  DiscoveryThread.cpp  DiscoveryThread.h  I2CDevice.cpp  I2CDevice.h  I2CServer.cpp  I2CServer.h  ImplementedResourceTypes.h  LightResource.cpp  LightResource.h  LightServer.cpp  LightServer.h  OnAttrChangeListener.h  PhysicalResourceRepr.h  RaspberryPI.cpp  ResourceArgumentsBundle.h  ResourceRepresentation.h  ResourceRepresentationBuilder.cpp  ResourceRepresentationBuilder.h  Rule.cpp  Rule.h  Scene.cpp  Scene.h  SceneServer.cpp  SceneServer.h  SensorResource.cpp  SensorResource.h  SensorServer.cpp  SensorServer.h  Server.cpp  Server.h  ServerModel.cpp  (+11 more)
src/exceptions/: CacheNotAvailableException.h  EmptyStringException.h  ForbiddenForPhysicalResException.h  ForbiddenForVirtualResException.h  MaxLowerThanMinException.h  MoreResWithSameURIException.h  NotDiscoveringException.h  NotInDiscoveredResException.h  NullPtrException.h  ThreadStoppedException.h  UnknownTypeServerException.h
src/unittests/: BasicServerTestFixture.cpp  CMakeLists.txt  ClientTestFixture.cpp  DiscoveringResourcesTestFixtures.cpp  DiscoveryManagerTestFixture.cpp  DiscoveryThreadTestFixture.cpp  ResRepresentationTestFixture.cpp  ServerModelTestFixture.cpp
